Adding some styles

--- a/climatisation.html
+++ b/climatisation.html
@@ -152,7 +152,7 @@
                         <br><br>
                         <strong>Notre équipe accompagne les particuliers et les professionnels souhaitant acquérir une nouvelle technologie de pompe à chaleur (PAC), et également:</strong>
                         <br><br>
-                        <h3 class="menu_content-p  margin-1200 my-2">• d’installer des climatiseurs dans des systèmes canalisés et divisés</h3>
+                        <h3 class="menu_content-p  margin-1200 my-2">• d’installer des climatiseurs</h3>
                         <h3 class="menu_content-p  margin-1200 my-2">• de créer un réseau de chauffage en radiateurs ou plancher chauffant,</h3>
                         <h3 class="menu_content-p  margin-1200 my-2">• d’installer un nouveau système d’eau chaude et de ventilation</h3>
                     </p>
@@ -322,7 +322,7 @@
             </div>
             <div class="one_partners one_cards-content">
                 <div class="one_partners-content">
-                    <h3 class="one_card-title">Nos financements projet</h3>
+                    <h3 class="one_card-title">Profiter des aides de l'Etat</h3>
                 </div>
                 <div class="row justify-content-center align-items-center text-center">
                     <div class="col-md-4">
