--- a/devis.html
+++ b/devis.html
@@ -207,7 +207,7 @@
                 <div class="devis_buttons">
                     <div class="devis_button tertaire" id="tertaire">
                         <div class="travaux_button-image devis_button-image">
-                            <img src="./assets/img/love.png"
+                            <img src="./assets/img/bag.png"
                                 class="travaux_button-image--img devis_button-image--img" alt="" />
                         </div>
                         <p class="travaux_button-title mt-4">Tertaire</p>
@@ -221,7 +221,7 @@
                     </div>
                     <div class="devis_button tertaire" id="tertaire">
                         <div class="travaux_button-image devis_button-image">
-                            <img src="./assets/img/bag.png"
+                            <img src="./assets/img/love.png"
                                 class="travaux_button-image--img devis_button-image--img" alt="" />
                         </div>
                         <p class="travaux_button-title mt-4">Médico-social</p>
@@ -436,7 +436,7 @@
             </div>
 
             <div class="areaId" id="areaId">
-                <h2 class="devis_header">Quelle est la supérficie de votre logement ? </h2>
+                <h2 class="devis_header">Quelle est la superficie de votre logement ? </h2>
                 <div class="areaBack">
                     <i class="fas fa-chevron-left backIcon-i"></i>
                 </div>
@@ -482,7 +482,7 @@
             </div>
 
             <div class="details">
-                <h2 class="devis_header">Vos coordonées </h2>
+                <h2 class="devis_header">Vos coordonnées </h2>
                 <div class="detailsBack">
                     <i class="fas fa-chevron-left backIcon-i"></i>
                 </div>
