--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -237,9 +237,9 @@
                         RGE pour passer aux énergies renouvelables
                     </h2>
                     <p class="menu_content-p stripe_content-p mt-5 text-justify">
-                        Le travail d’installation d’une pompe à chaleur dans une maison ne s’improvise pas. Quel que
+                        Le travail d’installation d’une pompe à chaleur dans une maison ne s’improvise pas. Quelque
                         soit le type de pompe à chaleur (aérothermie ou géothermie), elles doivent être réalisées par un
-                        professionnel du chauffage. Les pompes à chaleur thermiques à air captent la chaleur présente
+                        professionnel du chauffage. Les pompes à chaleur captent la chaleur présente
                         dans l’air extérieur sous forme de calories. Les pompes à chaleur géothermiques utilisent la
                         chaleur qui existe dans le sol.
                         <br><br>
@@ -252,8 +252,7 @@
                         que la prime « Coup de Pouce », compris entre 2 500 et 4 000 €, l’ANAH (Agence Nationale de
                         l’Habitat) de 1000 et 5000 euros pour la pompe à chaleur.
                         Tous les techniciens de MGPS ont l’expérience pour déterminer la solution de chauffage et de
-                        climatisation la mieux adaptée aux besoins réels de votre habitation ou de votre local
-                        commercial.
+                        climatisation la mieux adaptée aux besoins réels de votre habitation ou de vos locaux commerciaux.
                         <br><br>
                         <strong>Pour nous contacter, vous pouvez nous appeler au 01 64 38 35 82 ou nous écrire via notre
                             formulaire de contact en ligne. Un formulaire de demande de devis est également disponible.
@@ -332,7 +331,7 @@
                         <br><br>
                         •	le périmètre d’intervention ;<br>
                         •	La pompe à chaleur à installer.<br><br>
-                        Nos installateurs prodiguent des conseils personnalisés pour le choix d’une pompe à chaleur pneumatique ou géothermique. Le calcul de la taille de l’appareil est parfaitement optimisé pour votre consommation d’énergie.
+                        Nos installateurs prodiguent des conseils personnalisés pour le choix d’une pompe à chaleur ou géothermique. Le calcul de la taille de l’appareil est parfaitement optimisé pour votre consommation d’énergie.
                         <br><br>
                         Le coefficient de performance (COP) d’une pompe à chaleur est important. Ce facteur mesure l’efficacité et la performance de l’appareil de chauffage. L’Ademe (Administration de l’Environnement et de l’Énergie) recommande de choisir une pompe à chaleur à COP élevé. D’où une moindre consommation d’énergie.
                         <br><br>
